@startuml

title __ASPROJ.HIUI's Class Diagram__\n

  namespace com.example.hi_ui {
    class com.example.hi_ui.BuildConfig {
    }
  }
  

  namespace com.example.hi_ui {
    namespace ui.refresh {
      abstract class com.example.hi_ui.ui.refresh.HiOverView {
      }
    }
  }
  

  namespace com.example.hi_ui {
    namespace ui.refresh {
      interface com.example.hi_ui.ui.refresh.HiRefresh {
      }
    }
  }
  

  namespace com.example.hi_ui {
    namespace ui.tab.bottom {
      class com.example.hi_ui.ui.tab.bottom.HiTabBottom {
      }
    }
  }
  

  namespace com.example.hi_ui {
    namespace ui.tab.bottom {
      class com.example.hi_ui.ui.tab.bottom.HiTabBottomInfo {
      }
    }
  }
  

  namespace com.example.hi_ui {
    namespace ui.tab.bottom {
      class com.example.hi_ui.ui.tab.bottom.HiTabBottomLayout {
      }
    }
  }
  

  namespace com.example.hi_ui {
    namespace ui.tab.common {
      interface com.example.hi_ui.ui.tab.common.IHiTab {
      }
    }
  }
  

  namespace com.example.hi_ui {
    namespace ui.tab.common {
      interface com.example.hi_ui.ui.tab.common.IHiTabLayout {
      }
    }
  }
  

  namespace com.example.hi_ui {
    namespace ui.tab.top {
      class com.example.hi_ui.ui.tab.top.HiTabTop {
      }
    }
  }
  

  namespace com.example.hi_ui {
    namespace ui.tab.top {
      class com.example.hi_ui.ui.tab.top.HiTabTopInfo {
      }
    }
  }
  

  namespace com.example.hi_ui {
    namespace ui.tab.top {
      class com.example.hi_ui.ui.tab.top.HiTabTopLayout {
      }
    }
  }
  

  com.example.hi_ui.ui.refresh.HiOverView -up-|> android.widget.FrameLayout
  com.example.hi_ui.ui.refresh.HiOverView o-- com.example.hi_ui.ui.refresh.HiOverView.HiRefreshState : mState
  com.example.hi_ui.ui.tab.bottom.HiTabBottom .up.|> com.example.hi_ui.ui.tab.common.IHiTab
  com.example.hi_ui.ui.tab.bottom.HiTabBottom -up-|> android.widget.RelativeLayout
  com.example.hi_ui.ui.tab.bottom.HiTabBottomInfo o-- Color : defaultColor
  com.example.hi_ui.ui.tab.bottom.HiTabBottomInfo o-- com.example.hi_ui.ui.tab.bottom.HiTabBottomInfo.TabType : tabType
  com.example.hi_ui.ui.tab.bottom.HiTabBottomInfo o-- Color : tintColor
  com.example.hi_ui.ui.tab.bottom.HiTabBottomLayout .up.|> com.example.hi_ui.ui.tab.common.IHiTabLayout
  com.example.hi_ui.ui.tab.bottom.HiTabBottomLayout -up-|> android.widget.FrameLayout
  com.example.hi_ui.ui.tab.top.HiTabTop .up.|> com.example.hi_ui.ui.tab.common.IHiTab
  com.example.hi_ui.ui.tab.top.HiTabTop -up-|> android.widget.RelativeLayout
  com.example.hi_ui.ui.tab.top.HiTabTopInfo o-- Color : defaultColor
  com.example.hi_ui.ui.tab.top.HiTabTopInfo o-- com.example.hi_ui.ui.tab.top.HiTabTopInfo.TabType : tabType
  com.example.hi_ui.ui.tab.top.HiTabTopInfo o-- Color : tintColor
  com.example.hi_ui.ui.tab.top.HiTabTopLayout .up.|> com.example.hi_ui.ui.tab.common.IHiTabLayout
  com.example.hi_ui.ui.tab.top.HiTabTopLayout -up-|> android.widget.HorizontalScrollView


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
